--- a/src/app/styles/ui.css
+++ b/src/app/styles/ui.css
@@ -1,37 +1,24 @@
-body {
-    font: 12px sans-serif;
-    text-align: center;
-    margin: 20px;
+.button-group {
+  display: flex;
 }
-button {
-    border-radius: 5px;
-    background: white;
-    color: black;
-    border: none;
-    padding: 8px 15px;
-    margin: 0 5px;
-    box-shadow: inset 0 0 0 1px black;
-    outline: none;
+
+.arrow-button-group {
+  justify-content: flex-end;
+  margin-right: 8px;
 }
-#create {
-    box-shadow: none;
-    background: #18a0fb;
-    color: white;
+
+.icon-button-disabled {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  width: var(--size-medium);
+  height: var(--size-medium);
+  border-radius: var(--border-radius-small);
+  border: 2px solid transparent;
 }
-input {
-    border: none;
-    outline: none;
-    padding: 8px;
-}
-input:hover {
-    box-shadow: inset 0 0 0 1px rgba(0, 0, 0, 0.1);
-}
-button:focus {
-    box-shadow: inset 0 0 0 2px #18a0fb;
-}
-#create:focus {
-    box-shadow: inset 0 0 0 2px rgba(0, 0, 0, 0.3);
-}
-input:focus {
-    box-shadow: inset 0 0 0 2px #18a0fb;
+
+.icon--grey {
+  filter: invert(58%) sepia(8%) saturate(560%) hue-rotate(169deg)
+    brightness(87%) contrast(83%);
 }
